2007-12-14  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/gdb-adapter.cpp (putDebugChar): Added putDebugChar (using Uart driver).
                                                      Added getDebugChar (using Uart driver).

        * core/kernel/kernel.cpp (startKernel): Added initialize of COM2 serial port.

        * core/kernel/LogConsole.cpp: Chageged to use Uart driver.

        * core/kernel/Uart.cpp: Uart driver works well for both COM1 and COM2.
                                Added readChar, writeChar support.

2007-12-13  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/Uart.cpp (Uart::Uart): Added Uart (Universal Asynchronous Receiver Transmitter) driver.
                                             Not yet completed.

2007-12-07  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/gdb-adapter.cpp (gdb_printf): Added for gdb-stub.

        * core/kernel/string.cpp (ltona): Removed ltona.

        * core/kernel/LogConsole.cpp: Changed to use vsprintf.

        * core/kernel/GraphicalConsole.cpp: Changed to use vsprintf.

        * core/kernel/VesaConsole.cpp (VesaConsole::putInt): Removed putInt.
                                      (VesaConsole::printf): Changed to use vsprintf.

        * core/kernel/vsprintf.cpp (vsprintf): Added for kernel.

2007-12-05  higepon  <higepon@users.sourceforge.jp>

        * core/kernel/gdb-i386-stub.c: Added.

2007-11-04  higepon  <higepon@users.sourceforge.jp>

        * core/scheme/Makefile.dep.inc: Check whether gosh exists or not.

2007-10-27  higepon  <higepon@users.sourceforge.jp>

        * core/monapi/syscall.cpp (syscall_set_watch_point): Added for watch point support.

        * core/monapi/MemoryMap.cpp (MemoryMap::map): Changed map() to thread safe. It caused Music player crash.

2007-10-24  higepon  <higepon@users.sourceforge.jp>

        * core/monalibc/stdio/fflush.c (fflush): Fixed bug. Thx h0shu.
