@@ -20,12 +20,45 @@ void gdb_printf(const char* fmt, ...)
     va_end(ap);
 }
 
+/*!
+    \brief put char to COM2
+
+    \param ch 1byte char.
+    \author  Higepon
+    \date    create:2007/12/13 update:
+*/
 void putDebugChar(int ch)
 {
     g_com2->writeChar((char)ch);
 }
 
+/*!
+    \brief get char from COM2
+
+    \return char
+    \author  Higepon
+    \date    create:2007/12/13 update:
+*/
 int getDebugChar()
 {
     return g_com2->readChar();
+}
+
+extern InterruptHandlers* handlers;
+
+/*!
+    \brief register exception handler to kernel
+
+    \param exception_number exception number
+    \param exception_address address of handler
+    \return char
+    \author  Higepon
+    \date    create:2007/12/19 update:
+*/
+void exceptionHandler(int exception_number, void* exception_address)
+{
+    InterruptHandlers ih;
+    ih.number = exception_number;
+    ih.handler = (void (*)())exception_address;
+    handlers[exception_number] = ih;
 }
